--- a/Level Two Project/index.html
+++ b/Level Two Project/index.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to SwiftPay</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="Start.css">
 </head>
+<style>
+    .iconImg{
+    width: 90px;
+}
+
+#icoNs{
+    font-size: 50px;
+}
+</style>
 <body>
     <nav>
         <div class="d-flex justify-content-between p-4">
-            <div class="fs-2 w-75">Cityzen</div>
+            <div class="fs-2 w-75 text-danger-emphasis">SwiftPay</div>
             <div class="w-25 d-flex justify-content-between">
+                <a href="Log In.html">
                 <button class="btn btn-outline-dark">Log In</button>
+                </a>
                 <a href="Sign Up.html">
                     <button class="btn btn-outline-dark">Sign Up</button>
                 </a>
